# mnist-digit-recognition-workbench

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/: README.md
models/: README.md
reports/: error_analysis.md  metrics_v1.json  metrics_v2.json  per_class_accuracy.csv  robustness_results.csv
src/: v1_baseline.py  v2_cnn.py  v3_error_analysis.py  v3_robustness.py
src/common/: config.py  evaluate.py  load_data.py  predict.py  preprocess.py
tests/: test_preprocess.py
