[project]
name = "mnist-digit-recognition-workbench"
version = "0.1.0"
description = "Handwritten Digit Recognition Workbench"
authors = [
    {name = "Imtiaz-Mashrafee",email = "imtiaz.mashrafee.samin@g.bracu.ac.bd"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy (>=2.5.0,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "torch (>=2.12.1,<3.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "streamlit-drawable-canvas (>=0.9.3,<0.10.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "kaggle (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
